# App_PhysicalRecovery

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  benchmark_mlflow.py  docker-compose.yml  gitlab-ci.yml  main.py  mlflow.db  pose.proto  pyproject.toml
src/: camera_capture.py  detection_model.py  draw_pose.py  grpc_server.py  mlflow_experiments.py  pose_model.py  pose_pb2.py  pose_pb2_grpc.py  pose_rating.py  utils.py
src/pose_module/: __init__.py  detector.py  draw_pose.py  model_loader.py  pose_estimator.py  video_stream.py  visualizer.py
src/preprocessing/: frame_preprocessing.py
src/report_module/: report_generator.py  session_data.py
tests/: test_detector.py  test_draw_pose.py  test_frame_preprocessing.py  test_grpc_server.py  test_model_loader.py  test_pose_estimator.py
