[project]
name = "desarrollo-entregable-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "grpcio>=1.78.1",
    "grpcio-tools>=1.78.1",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
]
