[project]
name = "desarrollo-entregable-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "av>=16.1.0",
    "grpcio<1.78.1",
    "grpcio-tools<1.78.1",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
]
